--- a/assets/references.bib
+++ b/assets/references.bib
@@ -11,7 +11,7 @@
   title={Revisiting Elite Perceptions as Mediator of Elite Responsiveness to Public Opinion},
   author={Walgrave, Stefaan and Soroka, Stuart and Loewen, Peter and Sheafer, Tamir and Soontjens, Karolin},
   journal={Political Studies},
-  pages={00323217221105170},
+  volume={Forthcoming},
   year={2022},
   publisher={SAGE Publications Sage UK: London, England}
 }
@@ -56,7 +56,7 @@
 }
 @article{dickson2021sets,
   title={Who sets the agenda? MPs’ responsiveness to NGOs, corporations and the media},
-  author={Dickson, Zachary},
+  author={Dickson, Zachary P},
   journal={SSRN},
   url = {https://ssrn.com/abstract=4348997},
   note = {Available at: https://ssrn.com/abstract=4348997},
@@ -141,7 +141,7 @@
   publisher={SAGE Publications Sage UK: London, England}
 }
 @article{bates2020juliastats,
-  title={JuliaStats/MixedModels. jl: v2. 3.0},
+  title={MixedModels.jl: V2. 3.0},
   author={Bates, Douglas and Alday, Phillip and Kleinschmidt, Dave and Calder{\'o}n, Jos{\'e} Bayo{\'a}n Santiago and Noack, Andreas and Kelman, Tony and Baldassari, A},
   journal={Zenodo. Mar},
   year={2020}
@@ -149,7 +149,7 @@
 @article{silva2022politicians,
   title={Politicians unleashed? Political communication on Twitter and in parliament in Western Europe},
   author={Silva, Bruno Castanho and Proksch, Sven-Oliver},
-  journal={Political science research and methods},
+  journal={Political Science Research and Methods},
   volume={10},
   number={4},
   pages={776--792},
@@ -341,7 +341,8 @@ abstract = {I analyze the difference in the persistence of men and women after a
 @article{valentim2020does,
   title={Does Party-System Fragmentation Affect the Quality of Democracy?},
   author={Valentim, Vicente and Dinas, Elias},
-  journal={Valentim, Vicente and Elias Dinas. Does Party-System Fragmentation Affect the Quality of Democracy},
+  journal={SSRN},
+    url = {https://papers.ssrn.com/sol3/Papers.cfm?abstract_id=3533378},
   year={2020}
 }
 @article{alexiadou2022cabinet,
@@ -370,14 +371,15 @@ abstract = {I analyze the difference in the persistence of men and women after a
 	year         = 2017,
 	publisher    = {Oxford University Press}
 }
-@misc{cdc2022,
+@online{cdc2022,
 	title        = {{COVID Data Tracker}},
 	author       = {CDC},
 	year         = 2022,
 	month        = 9,
 	day          = {01},
 	publisher    = {US Department of Health and Human Services},
-	note         = {{Available at: https://covid.cdc.gov/covid-data-tracker. Accessed on: 2022-02-20}}
+        url = {https://covid.cdc.gov/covid-data-tracker},
+	note         = {Accessed on: 2022-02-20}
 }
 @book{guo2015power,
 	title        = {{The power of information networks: New directions for agenda setting}},
@@ -391,13 +393,13 @@ abstract = {I analyze the difference in the persistence of men and women after a
 	year         = 2020,
 	publisher    = {SocArXiv}
 }
-@misc{LeBlanc2020,
+@online{LeBlanc2020,
 	title        = {Republican Lawmakers who Downplayed Coronavirus Concerns Face Backlash over Early Vaccinations - CNNPolitics},
 	author       = {Paul LeBlanc},
 	year         = 2020,
-	month        = 12,
 	journal      = {CNN},
-	note         = {{Available at: https://edition.cnn.com/2020/12/21/politics/vaccine-lawmakers-backlash/index.html. Accessed on: 2022-01-06}}
+        url =    {https://edition.cnn.com/2020/12/21/politics/vaccine-lawmakers-backlash/index.html. Accessed on: 2022-01-06},
+	note         = {{Accessed on: 2022-01-06}}
 }
 @misc{Paz2020,
 	title        = {{All the President's Lies About the Coronavirus}},
@@ -412,13 +414,14 @@ abstract = {I analyze the difference in the persistence of men and women after a
 	year         = 2020,
 	publisher    = {Socarxiv}
 }
-@misc{usfed,
-	title        = {Unemployment Rate (UNRATE) \vert{} FRED \vert{} St. Louis Fed},
+@online{usfed,
+	title        = {Unemployment Rate (UNRATE) FRED St. Louis Fed},
 	author       = {St. Louis Federal Reserve},
 	year         = 2022,
 	month        = 8,
-	journal      = {St. Louis Fed: Economic Data},
-	note         = {{Available at: https://fred.stlouisfed.org/series/UNRATE. Accessed on 2022-02-02}}
+	publisher      = {St. Louis Fed: Economic Data},
+        url = {https://fred.stlouisfed.org/series/UNRATE},
+	note         = {{Accessed on 2022-02-02}}
 }
 @article{andeweg2011pathways,
 	title        = {{Pathways to Party Unity: Sanctions, Loyalty, Homogeneity and Division of Labour in the Dutch Parliament}},
@@ -488,7 +491,7 @@ abstract = {I analyze the difference in the persistence of men and women after a
 @article{beckwith2007numbers,
   title={Numbers and newness: The descriptive and substantive representation of women},
   author={Beckwith, Karen},
-  journal={Canadian Journal of Political Science/Revue canadienne de science politique},
+  journal={Canadian Journal of Political Science},
   volume={40},
   number={1},
   pages={27--49},
@@ -498,7 +501,7 @@ abstract = {I analyze the difference in the persistence of men and women after a
 @article{kanter1977some,
   title={Some effects of proportions on group life: Skewed sex ratios and responses to token women},
   author={Kanter, Rosabeth Moss},
-  journal={American journal of Sociology},
+  journal={American Journal of Sociology},
   volume={82},
   number={5},
   pages={965--990},
@@ -528,7 +531,7 @@ abstract = {I analyze the difference in the persistence of men and women after a
 @article{dahlerup1988small,
   title={From a small to a large minority: Women in Scandinavian politics},
   author={Dahlerup, Drude},
-  journal={Scandinavian political studies},
+  journal={Scandinavian Political Studies},
   volume={11},
   number={4},
   pages={275--298},
@@ -581,7 +584,7 @@ abstract = {I analyze the difference in the persistence of men and women after a
   year={2008},
   publisher={OUP USA}
 }
-@article{obrien_rickne_2016, title={Gender Quotas and Women's Political Leadership}, volume={110}, DOI={10.1017/S0003055415000611}, number={1}, journal={American Political Science Review}, publisher={Cambridge University Press}, author={'O’Brien, Diana Z. and Rickne, Johanna'}, year={2016}, pages={112–126}}
+@article{obrien_rickne_2016, title={Gender Quotas and Women's Political Leadership}, volume={110}, DOI={10.1017/S0003055415000611}, number={1}, journal={American Political Science Review}, publisher={Cambridge University Press}, author={O’Brien, Diana Z. and Rickne, Johanna}, year={2016}, pages={112–126}}
 @article{butler2022constituents,
   title={Constituents ask female legislators to do more},
   author={Butler, Daniel M and Naurin, Elin and {\"O}hberg, Patrik},
@@ -794,7 +797,7 @@ abstract = {I analyze the difference in the persistence of men and women after a
 }
 @book{Bartels2008,
 	title        = {{Unequal Democracy: The Political Economy of the New Gilded Age}},
-	author       = {Bartels, Larry M.},
+	author       = {Bartels, Larry M},
 	year         = 2008,
 	publisher    = {Russell Sage Foundation}
 }
@@ -881,7 +884,8 @@ abstract = {I analyze the difference in the persistence of men and women after a
 @article{geys2023public,
   title={Public Employees as Elected Politicians: Assessing Direct and Indirect Substantive Effects of Passive Representation},
   author={Geys, Benny and Murdoch, Z and S{\o}rensen, RJ},
-  journal={Forthcoming in Journal of Politics},
+  journal={Journal of Politics},
+  volume = {Forthcoming},
   year={2023}
 }
 @book{bourdieu1990reproduction,
@@ -927,7 +931,7 @@ abstract = {I analyze the difference in the persistence of men and women after a
 @article{imbens2008regression,
   title={Regression discontinuity designs: A guide to practice},
   author={Imbens, Guido W and Lemieux, Thomas},
-  journal={Journal of econometrics},
+  journal={Journal of Econometrics},
   volume={142},
   number={2},
   pages={615--635},
@@ -1047,7 +1051,16 @@ abstract = {The paper studies the effect of politicians’ education levels on g
   author={Marshall, John},
   journal={American Journal of Political Science},
   year={2022},
-  publisher={Wiley Online Library}
+  publisher={Wiley Online Library},
+  volume = {Forthcoming}
+}
+
+@article{marshall2022can,
+author = {Marshall, John},
+title = {Can Close Election Regression Discontinuity Designs Identify Effects of Winning Politician Characteristics?},
+journal = {American Journal of Political Science},
+volume = {Forthcoming},
+url = {https://doi.org/10.1111/ajps.12741},
 }
 @article{haugsgjerd2022policy,
 	title        = {Policy positions, power and interest group-party lobby routines},
@@ -1089,7 +1102,7 @@ abstract = {The paper studies the effect of politicians’ education levels on g
 	title        = {Corporate lobbying in the European Union: the logic of access},
 	author       = {Bouwen, Pieter},
 	year         = 2002,
-	journal      = {Journal of European public policy},
+	journal      = {Journal of European Public Policy},
 	publisher    = {Taylor \& Francis},
 	volume       = 9,
 	number       = 3,
@@ -1135,7 +1148,7 @@ abstract = {The paper studies the effect of politicians’ education levels on g
 	number       = 1,
 	pages        = {91--112}
 }
-@article{BBC2021,
+@online{BBC2021,
 	title        = {Sarah Everard: How Wayne Couzens planned her murder},
 	author       = {BBC},
 	year         = 2021,
@@ -1243,7 +1256,7 @@ abstract = {The paper studies the effect of politicians’ education levels on g
 	title        = {Incentives and prosocial behavior},
 	author       = {B{\'e}nabou, Roland and Tirole, Jean},
 	year         = 2006,
-	journal      = {American economic review},
+	journal      = {American Economic Review},
 	volume       = 96,
 	number       = 5,
 	pages        = {1652--1678}
@@ -1295,7 +1308,7 @@ abstract = {The paper studies the effect of politicians’ education levels on g
 }
 @online{dickson2023,
 title = {{CAP Multilingual Classification Model}},
-author = {Dickson, Zachary P.}, 
+author = {Dickson, Zachary P}, 
 year = {2023},
 url = {https://huggingface.co/z-dickson/CAP_multilingual},
 }
@@ -1439,7 +1452,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 @article{dacin2010formal,
   title={Formal dining at Cambridge colleges: Linking ritual performance and institutional maintenance},
   author={Dacin, M Tina and Munir, Kamal and Tracey, Paul},
-  journal={Academy of management journal},
+  journal={Academy of Management Journal},
   volume={53},
   number={6},
   pages={1393--1418},
@@ -1511,25 +1524,15 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	journal      = {OSF Preprints}
 }
 @article{Brunner2013,
-	title        = {{Does Less Income Mean Less Representation? \textdagger{}}},
+	title        = {{Does Less Income Mean Less Representation?}},
 	author       = {Brunner, Eric and Ross, Stephen L and Washington, Ebonya},
 	year         = 2013,
 	journal      = {American Economic Journal: Economic Policy},
 	volume       = 5,
 	number       = 2,
 	pages        = {53--76},
-	file         = {:home/zach/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brunner, Ross, Washington - 2013 - Does Less Income Mean Less Representation \textdagger{}.pdf:pdf}
 }
-@article{brzezinski2021science,
-	title        = {{Science Skepticism Reduced Compliance With Covid-19 Shelter-in-Place Policies in the United States}},
-	author       = {Brzezinski, Adam and Kecht, Valentin and Van Dijcke, David and Wright, Austin L},
-	year         = 2021,
-	journal      = {Nature Human Behaviour},
-	publisher    = {Nature Publishing Group},
-	volume       = 5,
-	number       = 11,
-	pages        = {1519--1527}
-}
+
 @article{brzezinski2021science,
 	title        = {{Science Skepticism Reduced Compliance With Covid-19 Shelter-in-Place Policies in the United States}},
 	author       = {Brzezinski, Adam and Kecht, Valentin and Van Dijcke, David and Wright, Austin L},
@@ -1946,13 +1949,14 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	year         = 2020,
 	publisher    = {Oxford University Press}
 }
-@misc{CenterforResponsivePolitics2018,
+@online{CenterforResponsivePolitics2018,
 	title        = {{Legislators' Net Worth - 2018 - Personal Finances}},
 	author       = {{Center for Responsive Politics}},
 	year         = 2018,
 	booktitle    = {Net Worth - 2018},
 	urldate      = {2022-01-27},
-	note         = {{Available at: https://www.opensecrets.org/personal-finances/top-net-worth. Accessed: 2022-01-27}}
+        url = {https://www.opensecrets.org/personal-finances/top-net-worth},
+	note         = {{Accessed: 2022-01-27}}
 }
 @article{childs2000,
 	title        = {{The New Labour Women MPS in the 1997 British Parliament: Issues of Recruitment and Representation}},
@@ -2054,14 +2058,14 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 3,
 	pages        = {849--860}
 }
-@misc{Cillizza2021,
+@online{Cillizza2021,
 	title        = {{Two Charts that Show Just How Old This Congress Actually Is.}},
 	author       = {Chris Cillizza},
 	year         = 2021,
 	month        = 1,
 	journal      = {CNNPolitics},
 	url          = {https://edition.cnn.com/2021/01/29/politics/congress-age/index.html},
-	note         = {{\textit{CNN}. Available at: https://edition.cnn.com/2021/01/29/politics/congress-age/index.html. Accessed: 2022-06-01}}
+	note         = {{Accessed: 2022-06-01}}
 }
 @article{cinelli2021echo,
 	title        = {{The Echo Chamber Effect on Social Media}},
@@ -2108,13 +2112,14 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	year         = 1999,
 	publisher    = {University of Michigan Press}
 }
-@misc{cook2020trump,
+@online{cook2020trump,
 	title        = {{Trump Rallies His Base to Treat Coronavirus as a `Hoax.'}},
 	author       = {Cook, Nancy and Choi, Matthew},
 	year         = 2020,
 	journal      = {Politico},
 	volume       = 28,
-	note         = {{\textit{Politico}. Available at: https://www.politico.eu/article/trump-rallies-his-base-to-treat-coronavirus-as-a-hoax/. Accessed: 2022-06-01}}
+        url = {https://www.politico.eu/article/trump-rallies-his-base-to-treat-coronavirus-as-a-hoax/},
+	note         = {{Accessed: 2022-06-01}}
 }
 @article{copeland2001theory,
 	title        = {{Theory and History in the Study of Major War}},
@@ -2316,7 +2321,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 @article{kittilson2008representing,
   title={Representing women: The adoption of family leave in comparative perspective},
   author={Kittilson, Miki Caul},
-  journal={The journal of politics},
+  journal={The Journal of Politics},
   volume={70},
   number={2},
   pages={323--334},
@@ -2371,7 +2376,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	author       = {Driscoll, John C and Kraay, Aart C},
 	year         = 1998,
 	journal      = {Review of Economics and Statistics},
-	publisher    = {MIT Press 238 Main St., Suite 500, Cambridge, MA 02142-1046, USA Journals~\ldots{}},
+	publisher    = {MIT Press 238 Main St., Suite 500, Cambridge, MA 02142-1046, USA Journals},
 	volume       = 80,
 	number       = 4,
 	pages        = {549--560}
@@ -2381,7 +2386,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	author       = {Driscoll, John C and Kraay, Aart C},
 	year         = 1998,
 	journal      = {Review of Economics and Statistics},
-	publisher    = {Mit Press 238 Main St., Suite 500, Cambridge, Ma 02142-1046, Usa Journals~\ldots{}},
+	publisher    = {Mit Press 238 Main St., Suite 500, Cambridge, Ma 02142-1046, USA Journals},
 	volume       = 80,
 	number       = 4,
 	pages        = {549--560}
@@ -2523,7 +2528,6 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	journal      = {Perspectives on Politics},
 	volume       = {Forthcoming},
 	pages        = {1--20},
-	file         = {:home/zach/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Elkjaer, Klitgaard - 2021 - Economic Inequality and Political Responsiveness A Systematic Review.pdf:pdf}
 }
 @article{ellsworth1965rationality,
 	title        = {{Rationality and Campaigning: A Content Analysis of the 1960 Presidential Campaign Debates}},
@@ -2574,13 +2578,12 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
   title={Unequal responsiveness and government partisanship in northwest Europe},
   author={Mathisen, Ruben Berge and Schakel, Wouter and Hense, Svenja and Els{\"a}sser, Lea and Persson, Mikael and Pontusson, Jonas},
   year={2021},
-  publisher={Universit{\'e} de Gen{\`e}ve}
+  journal={Universit{\'e} de Gen{\`e}ve}
 }
 @article{lupu2022unequal,
   title={Unequal policy responsiveness in Spain},
   author={Lupu, Noam and Tirado Castro, Alejandro},
   journal={Socio-Economic Review},
-  pages={mwac040},
   year={2022},
   publisher={Oxford University Press}
 }
@@ -4346,7 +4349,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 @article{lawless2004politics,
   title={Politics of presence? Congresswomen and symbolic representation},
   author={Lawless, Jennifer L},
-  journal={Political research quarterly},
+  journal={Political Research Quarterly},
   volume={57},
   number={1},
   pages={81--99},
@@ -4488,11 +4491,12 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	year         = 2009,
 	publisher    = {University of Chicago Press}
 }
-@misc{lewis2019voteview,
+@online{lewis2019voteview,
 	title        = {{Voteview: Congressional Roll-Call Votes Database}},
 	author       = {Lewis, Jeffrey B and Poole, Keith and Rosenthal, Howard and Boche, Adam and Rudkin, Aaron and Sonnet, Luke},
 	year         = 2019,
-	note         = {{Available at: https://voteview.com/. Accessed: 2021-08-27}}
+        url = {https://voteview.com/},
+	note         = {{Accessed: 2021-08-27}}
 }
 @article{lindgren2009,
 	title        = {{Who Knows Best What the People Want: Women or Men? A Study of Political Representation in India}},
@@ -4778,12 +4782,13 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	pages        = {107--127}
 }
 @misc{MarketWatch2022,
-	title        = {{DJIA \vert{} Dow Jones Industrial Average Overview \vert{} MarketWatch}},
+	title        = {{DJIA: Dow Jones Industrial Average Overview}},
 	author       = {MarketWatch},
 	year         = 2022,
 	month        = 8,
 	journal      = {Dow Jones Industrial Average},
-	note         = {{Available at: https://www.marketwatch.com/investing/index/djia. Accessed: 2022-06-06}}
+	note         = {{Accessed: 2022-06-06}},
+        url         = {https://www.marketwatch.com/investing/index/djia}
 }
 @misc{Martin2016,
 	title        = {{Benchmarking Widening Participation: How Should We Measure and Report Progress?}},
@@ -4924,7 +4929,6 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	title        = {{Efficient Estimation of Word Representations in Vector Space}},
 	author       = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
 	year         = 2013,
-	month        = {jan},
 	journal      = {Arxiv},
 	publisher    = {International Conference on Learning Representations, Iclr},
 	volume       = {preprint arXiv: 1301},
@@ -5277,16 +5281,6 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 1,
 	pages        = {51--73}
 }
-@article{page2013democracy,
-	title        = {{Democracy and the Policy Preferences of Wealthy Americans}},
-	author       = {Page, Benjamin I and Bartels, Larry M and Seawright, Jason},
-	year         = 2013,
-	journal      = {Perspectives on Politics},
-	publisher    = {Cambridge University Press},
-	volume       = 11,
-	number       = 1,
-	pages        = {51--73}
-}
 @article{Pardos-Prado2019,
 	title        = {{Economic Responsiveness and the Political Conditioning of the Electoral Cycle}},
 	author       = {Pardos-Prado, Sergi and Sargarzazu, Inaki},
@@ -5477,7 +5471,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 @article{swiss2012does,
   title={Does critical mass matter? Women's political representation and child health in developing countries},
   author={Swiss, Liam and Fallon, Kathleen M and Burgos, Giovani},
-  journal={Social forces},
+  journal={Social Forces},
   volume={91},
   number={2},
   pages={531--558},
@@ -5671,7 +5665,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 @article{bachrach1962twofaces,
   title={Two Faces of Power},
   author={Bachrach, Peter and Baratz, Morton S.},
-  journal={The American Political Science Review},
+  journal={American Political Science Review},
   volume={56},
   number={4},
   year={1962},
@@ -5738,7 +5732,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 @article{karp2008politics,
   title={When politics is not just a man's game: Women's representation and political engagement},
   author={Karp, Jeffrey A and Banducci, Susan A},
-  journal={Electoral studies},
+  journal={Electoral Studies},
   volume={27},
   number={1},
   pages={105--115},
@@ -5789,19 +5783,12 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	year         = 2003,
 	publisher    = {Univ of North Carolina Press}
 }
-@book{reingold2003representing,
-	title        = {{Representing Women: Sex, Gender, and Legislative Behavior in Arizona and California}},
-	author       = {Reingold, Beth},
-	year         = 2003,
-	publisher    = {Univ of North Carolina Press}
-}
-@article{reingold2008women,
+@inproceedings{reingold2008women,
 	title        = {{Women as Office Holders: Linking Descriptive and Substantive Representation}},
 	author       = {Reingold, Beth},
 	year         = 2008,
-	journal      = {Political Women and American Democracy},
-	publisher    = {Citeseer},
-	volume       = 9,
+	booktitle      = {Political Women and American Democracy: Perspectives on Women and Politics Research},
+	publisher    = {Cambridge University Press},
 	pages        = {128--147}
 }
 @article{rice1938quantitative,
@@ -5873,7 +5860,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	author       = {Rothgerber, Hank and Wilson, Thomas and Whaley, Davis and Rosenfeld, Daniel L and Humphrey, Michael and Moore, Allie and Bihl, Allison},
 	year         = 2020,
 	journal      = {PsyArXiv},
-	note         = {{Available: https://doi.org/10.31234/osf.io/k23cv}}
+	url         = {{https://doi.org/10.31234/osf.io/k23cv}}
 }
 @article{rovny2020still,
 	title        = {{Still Blurry? Economic Salience, Position and Voting for Radical Right Parties in Western Europe}},
@@ -6001,8 +5988,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	journal      = {Psyarxiv Preprints},
 	pages        = {1--19},
 	doi          = {10.31234/OSF.IO/97ZYE},
-	note         = {{Available at: https://psyarxiv.com/97zye/}},
-	keywords     = {19,COVID,Individual Differences,Interpersonal Relationships,Social and Behavioral Sciences,Social and Personality Psychology,culture,infection preventive behavior,information dissemination behavior,optimism,pandemic}
+	url         = {{https://psyarxiv.com/97zye/}},
 }
 @article{salgado2021won,
 	title        = {{``It Won't Happen to Us'': Unrealistic Optimism Affects Covid-19 Risk Assessments and Attitudes Regarding Protective Behaviour}},
@@ -6269,7 +6255,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	doi          = {10.31219/osf.io/gcn4q}
 }
 @misc{Shafer2020,
-	title        = {{Opinion \vert{} Behind Trump's Strange `Invisible Enemy' Rhetoric}},
+	title        = {{Opinion Behind Trump's Strange `Invisible Enemy' Rhetoric}},
 	author       = {Jack Shafer},
 	year         = 2020,
 	month        = 9,
@@ -6690,11 +6676,11 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	year         = 2017,
 	publisher    = {Princeton University Press}
 }
-@misc{TheSuttonTrust2019,
+@online{TheSuttonTrust2019,
 	title        = {{Elitist Britain 2019}},
 	author       = {{The Sutton Trust}},
 	year         = 2019,
-	note         = {{Available at: https://www.suttontrust.com/our-research/elitist-britain-2019/}},
+	url         = {{https://www.suttontrust.com/our-research/elitist-britain-2019/}},
 	institution  = {Social Mobility Commission}
 }
 @article{thomas1992,
@@ -6795,21 +6781,23 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 4157,
 	pages        = {1124--1131}
 }
-@misc{Bresnahan2020,
+@online{Bresnahan2020,
 	title        = {{Pelosi announces big expansion of Covid testing for lawmakers}},
 	author       = {John Bresnahan and Heather Caygle},
 	year         = 2020,
 	month        = 11,
 	journal      = {Politico},
-	note         = {{\textit{Politico}. Available at: https://www.politico.com/news/2020/11/05/pelosi-covid-testing-congress-434399. Accessed on: 2022-04-04}}
+        note = {Accessed on: 2022-04-04},
+	url         = {https://www.politico.com/news/2020/11/05/pelosi-covid-testing-congress-434399}
 }
-@misc{Deane2021,
+@online{Deane2021,
 	title        = {{A Year of U.S. Public Opinion on the Coronavirus Pandemic}},
 	author       = {Claudia Deane and Kim Parker and John Gramlich},
 	year         = 2021,
 	month        = 3,
 	journal      = {Pew Research Center},
-	note         = {{Available at: https://www.pewresearch.org/2021/03/05/a-year-of-u-s-public-opinion-on-the-coronavirus-pandemic/. Accessed on: 2022-04-04}},
+        url =       {https://www.pewresearch.org/2021/03/05/a-year-of-u-s-public-opinion-on-the-coronavirus-pandemic/},
+	note         = {{Accessed on: 2022-04-04}},
 	institution  = {Pew Research Center}
 }
 @online{NPR2022,
@@ -6830,11 +6818,11 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 3,
 	pages        = {539--553}
 }
-@misc{Twitter2021a,
+@online{Twitter2021a,
 	title        = {{Academic Research Product Track API}},
 	author       = {Twitter},
 	year         = 2021,
-	note         = {{Available at: https://developer.twitter.com/en/products/twitter-api/academic-research.}}
+	url         = {{https://developer.twitter.com/en/products/twitter-api/academic-research}}
 }
 @misc{UKConservativeParty2019,
 	title        = {{Conservative Party Manifesto 2019}},
@@ -7098,7 +7086,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	doi          = {10.1086/722042}
 }
 @misc{Walker2021,
-	title        = {{Transport Investment Key to Levelling Up, Pm Tells Tory Party Conference \vert{} Infrastructure Intelligence}},
+	title        = {{Transport Investment Key to Levelling Up, Pm Tells Tory Party Conference Infrastructure Intelligence}},
 	author       = {Walker, Andy},
 	year         = 2021,
 	month        = {oct},
@@ -7270,10 +7258,6 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 2,
 	pages        = {365--379},
 	issn         = {2049-8470},
-	abstract     = {Existing research on the revolving door examines why employers hire former politicians. I complement this demand-side approach by demonstrating the importance of the supply-side. In particular, I argue that one important institutional factor that shapes politicians' willingness to leave office for a private sector job is campaign finance legislation. Less restrictive rules increase campaign spending for incumbents, which makes revolving door employment less attractive. Empirically, I use novel data from the US states and a difference-in-differences design to show that the exogenous removal of campaign finance legislation through Citizens United reduced the probability that incumbents left office to work as lobbyists. The supply-side approach provides insights into comparative differences in the prevalence of the revolving door.},
-	file         = {:home/zach/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Weschle - 2021 - Campaign finance legislation and the supply-side of the revolving door.pdf:pdf},
-	keywords     = {American politics,comparative politics: political institutions,legislative politics},
-	mendeley-groups = {who\_leads}
 }
 @article{weschle2022,
 	title        = {{Politicians' Private Sector Jobs and Parliamentary Behavior}},
@@ -7432,12 +7416,13 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	note         = {{Available at: https://www.thetimes.co.uk/article/greensill-paid-david-cameron-7m-to-lobby-the-government-pxttxl6c5. Accessed on: 2021-09-24}},
 	mendeley-groups = {who\_leads}
 }
-@misc{GovTrack2022,
+@online{GovTrack2022,
 	title        = {{COVID-19 in Congress}},
 	author       = {GovTrack},
 	year         = 2022,
 	journal      = {GovTrack},
-	note         = {{Available at: https://www.govtrack.us/covid-19. Accessed on: 2022-04-04}}
+        url = {https://www.govtrack.us/covid-19},
+	note         = {{Accessed on: 2022-04-04}}
 }
 @article{xu2021individual,
 	title        = {{Individual Differences in Social Distancing and Mask-Wearing in the Pandemic of Covid-19: The Role of Need for Cognition, Self-Control and Risk Attitude}},
@@ -7489,7 +7474,6 @@ doi = {https://doi.org/10.1016/j.jeconom.2007.05.004},
 url = {https://www.sciencedirect.com/science/article/pii/S0304407607001121},
 author = {David S. Lee},
 keywords = {Regression discontinuity, Randomized experiments, Average treatment effects, Elections, Incumbency},
-abstract = {This paper establishes the relatively weak conditions under which causal inferences from a regression–discontinuity (RD) analysis can be as credible as those from a randomized experiment, and hence under which the validity of the RD design can be tested by examining whether or not there is a discontinuity in any pre-determined (or “baseline”) variables at the RD threshold. Specifically, consider a standard treatment evaluation problem in which treatment is assigned to an individual if and only if V>v0, but where v0 is a known threshold, and V is observable. V can depend on the individual's characteristics and choices, but there is also a random chance element: for each individual, there exists a well-defined probability distribution for V. The density function—allowed to differ arbitrarily across the population—is assumed to be continuous. It is formally established that treatment status here is as good as randomized in a local neighborhood of V=v0. These ideas are illustrated in an analysis of U.S. House elections, where the inherent uncertainty in the final vote count is plausible, which would imply that the party that wins is essentially randomized among elections decided by a narrow margin. The evidence is consistent with this prediction, which is then used to generate “near-experimental” causal estimates of the electoral advantage to incumbency.}
 }
 
 @misc{YouGov2021,
