--- a/assets/references.bib
+++ b/assets/references.bib
@@ -15,6 +15,16 @@
   year={2022},
   publisher={SAGE Publications Sage UK: London, England}
 }
+@article{bevan2016analysis,
+  title={An analysis of the public's personal, national and EU issue priorities},
+  author={Bevan, Shaun and Jennings, Will and Wlezien, Christopher},
+  journal={Journal of European Public Policy},
+  volume={23},
+  number={6},
+  pages={871--887},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
 @article{meltzer1981rational,
 	title = {{A Rational Theory of the Size of Government}},
 	author = {Meltzer, Allan H and Richard, Scott F},
