--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,15 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{elsasser2023political,
+  title={Political Inequality in Rich Democracies},
+  author={Els{\"a}sser, Lea and Sch{\"a}fer, Armin},
+  journal={Annual Review of Political Science},
+  volume={26},
+  pages={469--487},
+  year={2023},
+  publisher={Annual Reviews}
+}
 @article{walgrave2022revisiting,
   title={Revisiting Elite Perceptions as Mediator of Elite Responsiveness to Public Opinion},
   author={Walgrave, Stefaan and Soroka, Stuart and Loewen, Peter and Sheafer, Tamir and Soontjens, Karolin},
