--- a/assets/references.bib
+++ b/assets/references.bib
@@ -2593,6 +2593,14 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
   year={2017},
   publisher={SAGE Publications Sage UK: London, England}
 }
+@article{carnes2023economic,
+  title={The economic backgrounds of politicians},
+  author={Carnes, Nicholas and Lupu, Noam},
+  journal={Annual Review of Political Science},
+  volume={26},
+  year={2023},
+  publisher={Annual Reviews}
+}
 @article{mathisen2021unequal,
   title={Unequal responsiveness and government partisanship in northwest Europe},
   author={Mathisen, Ruben Berge and Schakel, Wouter and Hense, Svenja and Els{\"a}sser, Lea and Persson, Mikael and Pontusson, Jonas},
