--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,13 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@book{burke1826works,
+  title={The works of the right honourable Edmund Burke},
+  author={Burke, Edmund},
+  volume={4},
+  year={1826},
+  publisher={Wells and Lilly}
+}
 @article{elsasser2023political,
   title={Political Inequality in Rich Democracies},
   author={Els{\"a}sser, Lea and Sch{\"a}fer, Armin},
